cloud/networking/network-policies/allow-backup-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-backup-egress
spec:
  endpointSelector:
    matchLabels:
      network-policy/allow-backup-egress: apply
  egress:
    - toFQDNs:
        - matchName: "nbg1.your-objectstorage.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
