cloud/networking/network-policies/allow-foundryvtt-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-foundryvtt-egress
spec:
  endpointSelector:
    matchLabels:
      network-policy/allow-foundryvtt-egress: apply
  egress:
    - toFQDNs:
        - matchName: "r2.foundryvtt.com"
        - matchName: "api.foundryvtt.com"
        - matchName: "foundryvtt.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
