cloud/networking/network-policies/allow-minio-traffic.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-minio-traffic
spec:
  endpointSelector:
    matchLabels:
      network-policy/allow-minio-traffic: apply
  ingress:
    - fromEndpoints:
        - matchLabels:
            v1.min.io/tenant: default
            io.kubernetes.pod.namespace: storage
  egress:
    - toEndpoints:
        - matchLabels:
            v1.min.io/tenant: default
            io.kubernetes.pod.namespace: storage
