cloud/networking/network-policies/allow-modules-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-modules-egress
spec:
  endpointSelector:
    matchLabels:
      network-policy/allow-modules-egress: apply
  egress:
    - toFQDNs:
        - matchName: "artifacts.ddb.mrprimate.co.uk"
        - matchName: "d3erver.codabool.workers.dev"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
