cloud/networking/network-policies/allow-world-http-ingress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-world-http-ingress
spec:
  endpointSelector:
    matchLabels:
      network-policy/allow-world-http-ingress: apply
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
