cloud/networking/network-policies/ddb-proxy-ingress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ddb-proxy-ingress-policy
  labels:
    app.kubernetes.io/name: ddb-proxy-ingress-policy
    app.kubernetes.io/component: ddb-proxy
    app.kubernetes.io/part-of: foundry
    app.kubernetes.io/managed-by: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ddb-proxy
      app.kubernetes.io/instance: global
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/component: controller
            io.kubernetes.pod.namespace: ingress-nginx
