cloud/networking/network-policies/foundry-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: foundry-egress-policy
  labels:
    app.kubernetes.io/name: foundry-egress-policy
    app.kubernetes.io/component: foundry
    app.kubernetes.io/part-of: foundry
    app.kubernetes.io/managed-by: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: foundry
      app.kubernetes.io/part-of: foundry
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
